test_suite/tests/ui/with-variant/skip_de_whole_variant.stderr
error: variant `Unit` cannot have both #[serde(deserialize_with)] and #[serde(skip_deserializing)]
 --> $DIR/skip_de_whole_variant.rs:5:5
  |
5 | /     #[serde(deserialize_with = "deserialize_some_unit_variant")]
6 | |     #[serde(skip_deserializing)]
7 | |     Unit,
  | |________^

error: aborting due to previous error

